<resources>
    <!-- General -->
    <string name="app_name">Controle de gastos</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="cancel">Cancelar</string>

    <!-- TextViews -->
    <string name="text_total_spending">Gastos totais</string>
    <string name="text_menu_configuration">Configurações</string>
    <string name="text_create_new_list_title">Criar uma nova lista</string>
    <string name="text_add_new_item_title">Adicione um novo item</string>
    <string name="hint_list_name">Nome da lista</string>
    <string name="hint_name">Nome</string>
    <string name="hint_price">Preço</string>
    <string name="hint_optional_link">Link (Opcional)</string>

    <!-- Buttons -->
    <string name="btn_criar">Criar</string>
    <string name="btn_add">Adicionar</string>
    <string name="btn_delete">Deletar</string>

    <!-- Dialog -->
    <string name="dialogDeleteItem">Deseja mesmo deletar esse item?</string>


</resources>
