<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:context=".fragments.AddListDialogFragment"
                android:backgroundTint="?attr/fragmentbackgroundcolor"
                android:background="@drawable/fragment_background"
                android:padding="15dp">

    <TextView android:id="@+id/tvDialogTitle"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:textColor="?attr/textcolor"
              android:text="@string/text_create_new_list_title"/>

    <Spinner android:id="@+id/spColors"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvDialogTitle"/>

    <EditText android:id="@+id/etListName"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@id/spColors"
              android:hint="@string/hint_list_name"/>

    <Button android:id="@+id/btnCreateList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etListName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_gradient"
            android:textColor="@android:color/white"
            android:text="@string/btn_criar"/>

</RelativeLayout>